@@ -90,7 +90,7 @@ jobs:
                 run: "vendor/bin/simple-phpunit --coverage-clover=coverage.xml"
 
             -   name: "Upload coverage file"
-                uses: "actions/upload-artifact@v2"
+                uses: "actions/upload-artifact@v4"
                 with:
                     name: "phpunit-${{ matrix.php-version }}-${{ matrix.dependencies }}-${{ hashFiles('composer.lock') }}.coverage"
                     path: "coverage.xml"
@@ -108,11 +108,11 @@ jobs:
                     fetch-depth: 2
 
             -   name: "Download coverage files"
-                uses: "actions/download-artifact@v2"
+                uses: "actions/download-artifact@v4"
                 with:
                     path: "reports"
 
             -   name: "Upload to Codecov"
-                uses: "codecov/codecov-action@v2"
+                uses: "codecov/codecov-action@v4"
                 with:
                     directory: reports
